--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,8 @@
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.5",
     "clsx": "^2.1.0",
+    "event-source-polyfill": "^1.0.31",
+    "eventsource": "^2.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
@@ -28,6 +30,8 @@
     "yup": "^1.3.3"
   },
   "devDependencies": {
+    "@types/event-source-polyfill": "^1.0.5",
+    "@types/eventsource": "^1.1.15",
     "@types/node": "^20.10.6",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
