--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,8 +16,10 @@
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.5",
     "clsx": "^2.1.0",
+    "emoji-picker-react": "^4.9.2",
     "event-source-polyfill": "^1.0.31",
     "eventsource": "^2.0.2",
+    "javascript-time-ago": "^2.5.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
